tests/should_succeed/bug/168.coma
module M_168__max_int [#"168.rs" 3 0 3 25]
  let%span s168 = "168.rs" 4 4 4 14
  
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  constant const_MAX: UInt64.t = (18446744073709551615: UInt64.t)
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec max_int [#"168.rs" 3 0 3 25] (return' (x: UInt64.t)) = (! bb0
    [ bb0 = s0 [ s0 = [ &_0 <- [%#s168] const_MAX ] s1 | s1 = return''0 {_0} ] ] [ & _0: UInt64.t = Any.any_l () ])
    [ return''0 (result: UInt64.t) -> (! return' {result}) ]
end
