tests/should_fail/const_default.coma
module M_const_default__nat [#"const_default.rs" 9 0 9 20]
  let%span sconst_default = "const_default.rs" 11 19 11 37

  use creusot.int.UInt64
  use creusot.prelude.Any

  constant v_VALUE [#"const_default.rs" 6 4 6 22]  : UInt64.t

  meta "compute_max_steps" 1000000

  let rec nat[#"const_default.rs" 9 0 9 20] (return'  (x:()))= (! bb0
    [ bb0 = s0
      [ s0 = {[@expl:assertion] [%#sconst_default] (v_VALUE : UInt64.t) = (0 : UInt64.t)} s1 | s1 = return''0 {_0} ]
     ]
    ) [ & _0 : () = Any.any_l () ]  [ return''0 (result:())-> (! return' {result}) ]
end
